refactor: clarify failover mappings
